# bn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dev/: README.md  bn-re-bn-vr-skills-plan.md
plugin/bn_agent_bridge/: __init__.py  __main__.py  bridge.py  plugin.json
skills/binary-ninja-cli/: SKILL.md
skills/binary-ninja-cli/agents/: openai.yaml
skills/bn/: SKILL.md
skills/bn-re/: SKILL.md
skills/bn-vr/: SKILL.md
skills/bn/agents/: openai.yaml
src/bn/: cli.py  formatters.py  headless.py  output.py  paths.py  session_state.py  transport.py  version.py
src/bn/commands/: __init__.py  binary.py  function.py  misc.py  mutation.py  types.py
tests/: test_bridge.py  test_cli.py  test_integration.py  test_output.py  test_transport.py
tests/stress/: LARGE_BINARY_TEST_PROMPT.md  STRESS_TEST_PROMPT.md  run_stress.sh
