[project]
name = "bn"
version = "0.12.2"
description = "Agent-friendly Binary Ninja CLI with a GUI companion bridge"
readme = "README.md"
authors = [
    { name = "banteg", email = "4562643+banteg@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tiktoken>=0.12.0",
]

[project.scripts]
bn = "bn.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
